2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCCmain.c,
	  src/SDCCglue.c,
	  src/port.h,
	  src/z80/peeph-r2k.def,
	  src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/main.c,
	  src/z80/z80.h,
	  src/z80/peep.c:
	  Leland Morrison's Rabbit 2000 compiler port.

2011-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asrab,
	  sdas/asrab/Makefile.in,
	  sdas/asrab/rabbitext.c,
	  sdas/asrab/clean.mk,
	  sdas/asrab/rabbit.h,
	  sdas/asrab/rabbitadr.c,
	  sdas/asrab/rabbitpst.c,
	  sdas/asrab/rabbitmch.c:
	  Leland Morrison's assembler for Rabbit 2000 and Rabbit 4000.

2011-10-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/glob.cc: add HCS08 instructions to disassembler
	* src/SDCCval.c: fixed constant to avoid unintended long long literal

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h:
	  Added typedefs for 64-bit integer types.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCval.c:
	  Error for invalid integer suffix, as in 1ullul.

2011-10-01 Raphael Neider <rneider AT web.de>

	* device/non-free/include/pic14/pic12f1822.h,
	  device/non-free/lib/pic14/libdev/pic12f1822.c,
	  device/include/pic14/pic14devices.txt,
	  device/lib/pic14/libdev/devices.txt:
	  Add support for 12f1822 devices, requires --enable-new-pics to be
	  passed to configure, closes #3416092.

	* device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/configure.in:
	  Add --enable-new-pics switch to build device libs for devices added
	  to gputils only after the 0.13.7 release; by default, only libs for
	  devices that are supported in gputils 0.13.7 are built to avoid build
	  failures.

	* device/non-free/lib/pic14/configure:
	  Regenerated.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Slightly more informative error message when attempting to multiply, etc long long.
