@@ -11,6 +11,7 @@ typedef enum
   {
     SUB_Z80,
     SUB_Z180,
+    SUB_R2K,
     SUB_GBZ80
   }
 Z80_SUB_PORT;
@@ -33,7 +34,7 @@ extern Z80_OPTS z80_opts;
 #define IS_Z80 (z80_opts.sub == SUB_Z80)
 #define IS_Z180 (z80_opts.sub == SUB_Z180)
 #define IS_GB  (z80_opts.sub == SUB_GBZ80)
-
+#define IS_R2K  (z80_opts.sub == SUB_R2K)
 
 #define IY_RESERVED (z80_opts.reserveIY)
 
